objects/Case.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Previous_Agg_Relation_Date__c</fullName>
        <label>Previous Agg Relation Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Previous_Aggregator__c</fullName>
        <label>Previous Aggregator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Previous_BDM_Relation_Date__c</fullName>
        <label>Previous BDM Relation Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <controllingField>CRM_mtg_Product_Class__c</controllingField>
            <picklistValues>
                <fullName>Prime Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Full Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Alt Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Prime Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Prime Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Prime Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Full Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Alt Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Prime Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Prime Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Prime Full Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Prime Alt Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Prime Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Near Prime Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Near Prime Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Near Prime Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Specialist Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Specialist Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Specialist Full Doc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Specialist Alt Doc Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Purpose_Category__c</fullName>
        <label>Purpose Category</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing / Debt Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <controllingField>CRM_Mtg_Purpose_Category__c</controllingField>
            <picklistValues>
                <fullName>247 - Other Personal Investment (including shares and purchase of land for investment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>249 - Other (including shares and purchase of land for investment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>349 - Other - all purpose (eg. maintenance and repairs and other improvements that do not require building work)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>221 - Motors cars and station wagons - new</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>223 - Motors cars and station wagons - used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225 - Other motor vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>227 - Motor cycles, scooters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>229 - Boats, caravans and trailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>237 - Purchase of households and personal goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>241 - Travel and holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase off the plan purchase/ new unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of newly erected dwelling - Other dwelling by first mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of established dwelling - House by first mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of established dwelling - Other dwelling - secured by first mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of vacant residential land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance for the purchase of land and buildings - Dwelling for rentals/resale (not owner occupied)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance of Owner Occupied property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance and Debt consolidation (incl. tax debt &amp; business debt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing - Personal Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance of Investment property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing - Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of existing unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of house</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_QA_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Quiz_Completed_Date_Time__c</fullName>
        <label>Quiz Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Quiz_Sent_Date_Time__c</fullName>
        <label>Quiz Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Scenario_Time_Elapsed__c</fullName>
        <formula>FLOOR((NOW() - 
CASE(Status,
&apos;New&apos;,CRM_Mtg_Date_Time_Assigned__c,
&apos;Response Sent&apos;,CRM_Mtg_Email_Sent_Date_Time__c,
&apos;Response Received&apos;,CRM_Mtg_Email_Received_Date_Time__c,
NOW()
))*24*60)</formula>
        <label>Time Elapsed (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Scenario_Time_Indicator__c</fullName>
        <formula>IF(CRM_Mtg_Scenario_Time_Elapsed__c &lt;= 120, 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,25,25), 
IF(CRM_Mtg_Scenario_Time_Elapsed__c &gt; 120 &amp;&amp; CRM_Mtg_Scenario_Time_Elapsed__c &lt;= 240, 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,25,25), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,25,25) 
) 
)</formula>
        <label>Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Type__c</fullName>
        <label>Security Type</label>
        <picklist>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Density</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_App_Submission_Date__c</fullName>
        <description>Date when broker expects to submit application - used by scenario</description>
        <inlineHelpText>Date when broker expects to submit application</inlineHelpText>
        <label>Target App Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Time_Elapsed__c</fullName>
        <formula>IF(Owner:Queue.Id != Null,
FLOOR((NOW() - CreatedDate)*24*60),
0)</formula>
        <label>Time Elapsed (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Time_Indicator__c</fullName>
        <formula>IF(CRM_Mtg_Time_Elapsed__c &lt;= 120, 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,25,25), 
IF(CRM_Mtg_Time_Elapsed__c &gt; 120 &amp;&amp; CRM_Mtg_Time_Elapsed__c &lt;= 240, 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,25,25), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,25,25) 
) 
)</formula>
        <label>Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Todays_Day__c</fullName>
        <formula>CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <label>Todays Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Training_Completed_by_BDM__c</fullName>
        <inlineHelpText>Selecting No will automatically send the quiz to the broker</inlineHelpText>
        <label>Training Completed by BDM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Type__c</fullName>
        <formula>IF(RecordType.Name == &apos;Mortgage Broker Accreditation&apos;, 
&apos;New&apos;, 
IF(RecordType.Name == &apos;Mortgage Broker Transfer&apos;, 
&apos;Transfer&apos;, 
&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Verification_Completed_Date_Time__c</fullName>
        <label>Verification Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Verification_Started_Date_Time__c</fullName>
        <label>Verification Started Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome/Transfer Email Verified &amp; Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Contact_Email__c</fullName>
        <formula>CRM_Mtg_White_Label_Contact__r.Email</formula>
        <label>White Label Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Contact_Mobile__c</fullName>
        <formula>CRM_Mtg_White_Label_Contact__r.MobilePhone</formula>
        <label>White Label Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Contact_NextgenLogin__c</fullName>
        <formula>CRM_Mtg_White_Label_Contact__r.CRM_Mtg_Nextgen_Login__c</formula>
        <label>White Label Contact Nextgen Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Contact_Unique_Id__c</fullName>
        <formula>TEXT(CRM_Mtg_White_Label_Contact__r.CRM_Mtg_Unique_Id__c)</formula>
        <label>White Label Contact Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>White Label Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.CRM_Mtg_Channel__c</field>
                <operation>equals</operation>
                <value>White Label</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_White_Label_Profile_Created__c</fullName>
        <label>White Label Profile Created (AFG Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_PAF_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAF BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Scenario_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_System_logins_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System logins created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_mtg_Post_Code_Category__c</fullName>
        <label>Post Code Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_mtg_Product_Class__c</fullName>
        <label>Product Class</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Conforming</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseComplexity__c</fullName>
        <label>Case Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseResolution__c</fullName>
        <label>Case Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Loan_type__c</controllingField>
            <picklistValues>
                <fullName>Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendors(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Customers(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Customers(U)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <formula>Contact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_30__c</fullName>
        <formula>ClosedDate  + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date+30</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DE_Decision__c</fullName>
        <description>Decision provided by decision engine.</description>
        <label>Decision Engine Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DE_Product__c</fullName>
        <description>Product returned by Decision Engine</description>
        <label>Decision Engine Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffortsInHrs__c</fullName>
        <label>Efforts in Hrs.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enforcement_Case_Bucket_Field__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforcement Case Bucket Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enquiry_Issue__c</fullName>
        <label>Enquiry Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Fee Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payout Figure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Payment Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EscalatedLevel1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EscalatedLevel1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalatedLevel2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EscalatedLevel2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedExternalCost__c</fullName>
        <label>Estimated External Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedInternalCost__c</fullName>
        <formula>EstimatedInternalEffortHrs__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Internal Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedInternalEffortHrs__c</fullName>
        <label>Estimated Internal Effort (Hrs.)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JIRARef__c</fullName>
        <label>JIRA Ref #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <description>Lead ID from external system, such as PPS, Resolve, or alternately the Case ID for an internal Scenario.</description>
        <externalId>true</externalId>
        <label>Lead ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>IF(
  AND(
    BEGINS(Subject, &quot;Pepper Product Selector&quot;), 
    SuppliedEmail = &quot;no-reply@inteflow.com.au&quot;
  ),
  &quot;PPS&quot;, 
IF(
  AND(
    BEGINS(Subject, &quot;Resolve decision&quot;), 
    SuppliedEmail = &quot;no-reply@inteflow.com.au&quot;
  ),
  &quot;Resolve&quot;,
  &quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_time_needed_for_assistance__c</fullName>
        <label>Length of time needed for assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LineOfBusiness__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pepper Asset Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland CRE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <formula>CL_Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Surrogate__c</fullName>
        <formula>Property_Insurance__r.Loan_Surrogate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Surrogate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_type__c</fullName>
        <label>Loan type</label>
        <picklist>
            <picklistValues>
                <fullName>Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnSecured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_response_date__c</fullName>
        <description>Next response date</description>
        <label>Next response date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAF_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAF Application</label>
        <referenceTo>CRM_Application__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Case is related to another Case pick the Original, Source Case as the Parent</inlineHelpText>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PepCreatedfromPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PepPreferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PepSeverity__c</fullName>
        <label>Severity</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pep_Traffic_Light_Status__c</fullName>
        <formula>IF( pep_No_of_days_case_open__c &lt;= 7,
IMAGE(&apos;/resource/1470031928000/GreenIndicator&apos;,&apos;green&apos;,30,30),
IF((pep_No_of_days_case_open__c &gt; 7 &amp;&amp; pep_No_of_days_case_open__c &lt;=14),
IMAGE(&apos;/resource/1470031928000/OrangeIndicator&apos;,&apos;orange&apos;,30,30),
IF(pep_No_of_days_case_open__c &gt; 14,
IMAGE(&apos;/resource/1470031928000/RedIndicator&apos;,&apos;red&apos;,30,30),
IMAGE(&apos;/resource/1470031928000/GreenIndicator&apos;,&apos;green&apos;,30,30)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traffic Light Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>NONCONFORMING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONCONFORMINGNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Insurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Insurance</label>
        <referenceTo>Property_Insurance__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Approval_Date__c</fullName>
        <label>Loan Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Assessment_Result__c</fullName>
        <formula>if( OR(QA_Unanswered_Questions__c &gt; 0, QA_Total_Weighting__c = 0 ), &apos;Unanswered Questions&apos;, 

IF(  QA_Count_Failed_Instant_Fails__c &gt; 0, &apos;Fail&apos;, 

IF (  QA_Count_Pass_With_Exceptions__c &gt; 0, &apos;Pass With Exceptions&apos;, &apos;Pass&apos;)

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Assessment Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Motor Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Count_Failed_Instant_Fails__c</fullName>
        <label>QA Count Failed Instant Fails</label>
        <summaryFilterItems>
            <field>QA_Question__c.Auto_Fail__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QA_Question__c.Answer__c</field>
            <operation>equals</operation>
            <value>Unsatisfactory</value>
        </summaryFilterItems>
        <summaryForeignKey>QA_Question__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QA_Count_Pass_With_Exceptions__c</fullName>
        <label>QA Count Pass With Exceptions</label>
        <summaryFilterItems>
            <field>QA_Question__c.Answer__c</field>
            <operation>equals</operation>
            <value>Unsatisfactory</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QA_Question__c.Auto_Fail__c</field>
            <operation>equals</operation>
            <value>Pass With Exceptions</value>
        </summaryFilterItems>
        <summaryForeignKey>QA_Question__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QA_Deal_Size__c</fullName>
        <label>Deal Size</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 30k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 30k</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>